--- a/relazione/commands.tex
+++ b/relazione/commands.tex
@@ -2,6 +2,7 @@
 \newcommand{\boost}{boost\xspace{}}
 \newcommand{\cpp}{C$++$\xspace{}}
 \newcommand{\osg}{OpenSceneGraph\xspace{}}
+\newcommand{\cuda}{CUDA$^\text{\textregistered}$}
 
 
 % qualche comando per uniformare lo stile di scrittura
