--- a/relazione/CNCSimulator_relazione.tex
+++ b/relazione/CNCSimulator_relazione.tex
@@ -14,6 +14,8 @@
 \usepackage{amsfonts}
 \usepackage{booktabs}
 \usepackage{wrapfig}
+\usepackage{pdflscape}
+\usepackage{rotating}
 %\usepackage[numbers]{natbib}
 
 \usepackage{listings}
