--- a/relazione/section/modules.tex
+++ b/relazione/section/modules.tex
@@ -4,12 +4,13 @@ Sin dalle prime fasi della progettazione il programma è stato suddiviso in modu
 
 \subsection{UML del moduli}
 Per meglio comprendere le scelte progettuali fatte, viene presentato in figura \ref{fig:uml_cncsimulator} il diagramma UML dei moduli e delle classi principali che compongono il software.
-\begin{figure}[htp]
+
+\begin{sidewaysfigure}[htp]
 	\centering
-	\includegraphics[width=.97\textheight, angle=90]{img/uml_cncsimulator}
+	\includegraphics{img/uml_cncsimulator}
 	\caption{UML dei moduli e delle classi principali del software.}
 	\label{fig:uml_cncsimulator}
-\end{figure}
+\end{sidewaysfigure}
 
 
 \input{section/modules_configurator}
