--- a/relazione/section/strumenti-compilazione.tex
+++ b/relazione/section/strumenti-compilazione.tex
@@ -45,9 +45,9 @@ Per eseguire il progetto, lanciare il comando\\ \verb!/path/del/progetto/CNCSimu
 In fase di esecuzione, è possibile modificare il comportamento del simulatore interagendo con esso mediante i seguenti comandi, visibili sul terminale premendo \texttt{h}:
 \begin{itemize}[noitemsep]
   \item \verb'r'		esegue la simulazione alla massima velocità possibile, aggiornando il visualizzazore quando possibile;
-  \item \verb'1'		aggiorna il visualizzatore ad ogni iterazione;
-  \item \verb'2'		aggiorna il visualizzatore ogni $10$ iterazioni;
-  \item \verb'3'		aggiorna il visualizzatore ogni $50$ iterazioni;
+  \item \verb'1'		il miller esegue una mossa e poi si pone in pausa;
+  \item \verb'2'		il miller esegue $10$ mosse e poi si pone in pausa;
+  \item \verb'3'		il miller esegue $50$ mosse e poi si pone in pausa;
   \item \verb'p'		pausa;
   \item \verb't'		blocca/attiva gli aggiornamenti delle informazioni;
   \item \verb'k'		termina il milling;
