--- a/relazione/section/modules_visualizer.tex
+++ b/relazione/section/modules_visualizer.tex
@@ -8,8 +8,7 @@ Nella modalità testuale il software si presenta come in figura \ref{fig:visuali
 	\caption{\shell{CNCSimulator} avviato in modalità testuale.}
 	\label{fig:visualizer_textmode}
 \end{figure}
-
-Durante l'esecuzione la modalità testuale stampa a video una nuova riga ad ogni ``mossa'' completata. Le informazioni ivi contenute riguardano il lavoro svolto dal \emph{miller} espresso in numero di foglie analizzate, aggiunte o cancellate, la quantità di materiale eroso, l'eventuale necessità di attivare il getto d'acqua e il tempo speso nell'elaborazione della mossa.
+Durante l'esecuzione questa modalità stampa a video una nuova riga ad ogni ``mossa'' completata. Le informazioni ivi contenute riguardano: il lavoro svolto dal \emph{miller}, espresso in numero di foglie analizzate, aggiunte o cancellate, la quantità di materiale eroso, l'eventuale necessità di attivare il getto d'acqua e il tempo speso nell'elaborazione della mossa.
 
 Il simulatore lanciato in modalità grafica esibisce una finestra simile a quella in figura \ref{fig:visualizer_graphicmode}. Oltre a mostrare lo stato dell'erosione in tempo reale permette all'utente di interagire con l'esecuzione in corso, mettendola in pausa, facendola avanzare di alcune mosse alla volta o disabilitando momentaneamente l'aggiornamento della scena per dedicare tutte le risorse hardware alla fresatura.
 \begin{figure}[htp]
