--- a/relazione/section/strumenti-compilazione.tex
+++ b/relazione/section/strumenti-compilazione.tex
@@ -49,7 +49,7 @@ In fase di esecuzione, è possibile modificare il comportamento del simulatore i
   \item \verb'2'		il miller esegue $10$ mosse e poi si pone in pausa;
   \item \verb'3'		il miller esegue $50$ mosse e poi si pone in pausa;
   \item \verb'p'		pausa;
-  \item \verb't'		blocca/attiva gli aggiornamenti delle informazioni;
+  \item \verb't'		blocca/attiva gli aggiornamenti delle informazioni visualizzate;
   \item \verb'k'		termina il milling;
   \item \verb'h'		mostra il menu di help;
   \item \verb'ESC'	esce dal simulatore.
