--- a/relazione/section/modules_mesher.tex
+++ b/relazione/section/modules_mesher.tex
@@ -9,7 +9,7 @@ Il processo di \emph{meshing} si articola in due fasi: una prima fase di aggiorn
 L'albero così arricchito di dati aggiuntivi viene quindi ritornato e, al momento della visualizzazione, scatta la seconda fase di \emph{meshing} a cura di una funzione di callback presente su ogni nodo foglia dell'albero. Questa procedura parte dai dati dei volumi di competenza e si incarica di calcolarne la mesh vera e propria, la quale verrà salvata, e mai più ricalcolata fintanto che i relativi voxel non subiscono variazioni. Da quanto detto si evince che la mesh di una foglia ---costituita da centinaia di voxel--- viene ricostruita da zero anche nel caso uno solo di questi volumi sia stato modificato. A prima vista ciò sembra uno spreco di risorse, ma, alla luce del ``principio'' di località della lavorazione, si ha che nella maggior parte dei casi le mesh da ricalcolare sono state pesantemente modificate: ciò si traduce in un basso overhead dovuto alle porzioni rimaste inalterate.
 
 \subsubsection{Meshing tramite \texttt{box}}
-Un modo per rappresentare lo stato della lavorazione consiste nel mostrare direttamente i voxel non ancora totalmente erosi dalla fresa: così facendo si esegue un'approssimazione in quanto ogni volume viene considerato totalmente presente quando, nella realtà, delle porzioni ---ovvero alcuni vertici--- potrebbero esser già stati asportati.
+\label{meshingbox} Un modo per rappresentare lo stato della lavorazione consiste nel mostrare direttamente i voxel non ancora totalmente erosi dalla fresa: così facendo si esegue un'approssimazione in quanto ogni volume viene considerato totalmente presente quando, nella realtà, delle porzioni ---ovvero alcuni vertici--- potrebbero esser già stati asportati.
 
 L'algoritmo che crea questo tipo di mesh si avvaleva inizialmente del costrutto \texttt{Box} messo a disposizione da \osg, ma le prestazioni ottenute erano scadenti; le motivazioni risiedevano sia nel numero di facce ``nascoste'' che venivano comunque create, sia nel modo in cui la libreria grafica gestisce le \texttt{Box} stesse, ovvero come fossero tante piccole mesh e questo, come già visto, non è una situazione ottimale. L'implementazione successiva ha quindi cercato di rimediare a questi due problemi disegnando, per ogni parallelepipedo, tutti e soli i lati visibili, e accorpando quelli afferenti allo stesso nodo foglia in un unica mesh, di maggiori dimensioni.
 
