--- a/relazione/section/strumenti-compilazione.tex
+++ b/relazione/section/strumenti-compilazione.tex
@@ -1,6 +1,6 @@
 \section{Strumenti usati, prerequisiti e istruzioni}
 \subsection{Strumenti usati}
-Il progetto è stato sviluppato in \cpp. Per lo sviluppo in ambiente Linux abbiamo usato Eclipse su Ubuntu 12.04, mentre per l'ambiente Windows è stato usato Visual Studio 2010. Lo strumento usato per la compilazione è CMake ($\geq 2.6$).
+Il progetto è stato sviluppato in \cpp. Per lo sviluppo in ambiente Linux è stato usato Eclipse su Ubuntu 12.04, mentre per l'ambiente Windows è stato usato Visual Studio 2010. Lo strumento usato per la compilazione è CMake ($\geq 2.6$).
 
 \subsection{Prerequisiti}
 Il progetto è stato sviluppato usando le seguenti librerie:
